--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -24,6 +24,14 @@
 				<li><a href="#">链接</a></li>
 				<li><a href="#">链接</a></li>
 			</ul>
+
+			<ul class="nav navbar-nav navbar-right">
+				{% if current_user.is_authenticated %}
+				<li><a href="{{ url_for('auth.logout') }}">Sign Out</a></li>
+				{% else %}
+				<li><a href="{{ url_for('auth.login') }}">Sign In</a></li>
+				{% endif %}
+			</ul>
 		</div>
 	</div>
 </nav>
