complete first nine chapter

--- a/app/templates/500.html
+++ b/app/templates/500.html
@@ -6,6 +6,6 @@
 {% endblock %}
 {% block page_content %}
 <div class="page-header">
-	<h1> 403 -- Permission Denied | Forbidden </h1>
+	<h1> 503 -- Service Unavailable | Internal Server Error</h1>
 </div>
 {% endblock %}
