--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -15,23 +15,30 @@
 			<span class="icon-bar"></span>
 			<span class="icon-bar"></span>
 		</button>
-		<a class="navbar-brand" href="#">Flasky</a>
+		<a class="navbar-brand" href="{{ url_for('main.index') }}">Flasky</a>
 		</div>
 		<div class="collapse navbar-collapse" id="flasky-nav">
 			<ul class="nav navbar-nav">
-				<li class="avtive"><a href="#">Link</a></li>
-				<li><a href="#">链接</a></li>
-				<li><a href="#">链接</a></li>
-				<li><a href="#">链接</a></li>
+				<li class="avtive"><a href="{{ url_for('main.index') }}">Home</a></li>
+				<li><a href="{{ url_for('main.secret') }}">Secret</a></li>
+				<li><a href="{{ url_for('main.admin') }}">Admin</a></li>
+				<li><a href="{{ url_for('main.moderator') }}">Moderator</a></li>
 			</ul>
 
-			<ul class="nav navbar-nav navbar-right">
-				{% if current_user.is_authenticated %}
-				<li><a href="{{ url_for('auth.logout') }}">Sign Out</a></li>
-				{% else %}
-				<li><a href="{{ url_for('auth.login') }}">Sign In</a></li>
-				{% endif %}
-			</ul>
+            <ul class="nav navbar-nav navbar-right">
+                {% if current_user.is_authenticated %}
+                <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Account <b class="caret"></b></a>
+                    <ul class="dropdown-menu">
+                        <li><a href="{{ url_for('auth.change_password') }}">Change Password</a></li>
+                        <li><a href="{{ url_for('auth.change_email_request') }}">Change Email</a></li>
+                        <li><a href="{{ url_for('auth.logout') }}">Log Out</a></li>
+                    </ul>
+                </li>
+                {% else %}
+                <li><a href="{{ url_for('auth.login') }}">Log In</a></li>
+                {% endif %}
+            </ul>
 		</div>
 	</div>
 </nav>
@@ -40,10 +47,10 @@
 {% block content %}
 <div class="container">
 	<br>
-	{% for message in get_flashed_messages() %}
-		<div class="alert alert-warning fade in">	
-			<button class="close" data-dismiss="alert">&times;</button>
+	{% for category, message in get_flashed_messages(with_categories=true) %}
+		<div class="alert alert-{{ category }} fade in" role="{{ category }}">
 			{{ message }}
+			<button type="button" class="close" aria-label="Close" data-dismiss="alert"><span aria-hidden="true">&times;</span></button>
 		</div>
 	{% endfor %}
 </div>
@@ -53,5 +60,6 @@
 {% block scripts %}
 <script src="{{url_for('static', filename='js/jquery-1.11.3.min.js')}}"></script>
 <script src="{{url_for('static', filename='js/bootstrap.min.js')}}"></script>
+<!-- <script src="{{url_for('static', filename='js/moment-with-locales.min.js')}}"></script> -->
 {{ moment.include_moment()}}
 {% endblock %}
