--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -23,22 +23,28 @@
 				<li><a href="{{ url_for('main.secret') }}">Secret</a></li>
 				<li><a href="{{ url_for('main.admin') }}">Admin</a></li>
 				<li><a href="{{ url_for('main.moderator') }}">Moderator</a></li>
+				{% if current_user.is_authenticated %}
+				<li><a href="{{ url_for('main.user', username=current_user.username) }}">Profile</a></li>
+				{% endif %}
 			</ul>
 
-            <ul class="nav navbar-nav navbar-right">
-                {% if current_user.is_authenticated %}
-                <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Account <b class="caret"></b></a>
-                    <ul class="dropdown-menu">
-                        <li><a href="{{ url_for('auth.change_password') }}">Change Password</a></li>
-                        <li><a href="{{ url_for('auth.change_email_request') }}">Change Email</a></li>
-                        <li><a href="{{ url_for('auth.logout') }}">Log Out</a></li>
-                    </ul>
-                </li>
-                {% else %}
-                <li><a href="{{ url_for('auth.login') }}">Log In</a></li>
-                {% endif %}
-            </ul>
+			<ul class="nav navbar-nav navbar-right">
+				{% if current_user.can(Permission.MODERATE_COMMENTS)  %}
+				<li><a href="{{ url_for('main.moderate') }}">Moderate Comments</a></li>
+				{% endif %}
+				{% if current_user.is_authenticated %}
+				<li class="dropdown">
+					<a href="#" class="dropdown-toggle" data-toggle="dropdown">Account <b class="caret"></b></a>
+					<ul class="dropdown-menu">
+						<li><a href="{{ url_for('auth.change_password') }}">Change Password</a></li>
+						<li><a href="{{ url_for('auth.change_email_request') }}">Change Email</a></li>
+						<li><a href="{{ url_for('auth.logout') }}">Log Out</a></li>
+					</ul>
+				</li>
+				{% else %}
+				<li><a href="{{ url_for('auth.login') }}">Log In</a></li>
+				{% endif %}
+			</ul>
 		</div>
 	</div>
 </nav>
@@ -54,8 +60,9 @@
 		</div>
 	{% endfor %}
 </div>
-  <!-- <h1>Hello, Bootstrap</h1> -->
-  {% block page_content %}{% endblock %}
+<div class="container">
+	{% block page_content %}{% endblock %}
+</div>
 {% endblock %}
 {% block scripts %}
 <script src="{{url_for('static', filename='js/jquery-1.11.3.min.js')}}"></script>
