--- a/app/templates/edit_post.html
+++ b/app/templates/edit_post.html
@@ -1,15 +1,20 @@
 {% extends "base.html" %}
 {% import "bootstrap/wtf.html" as wtf %}
 
-{% block title %}Flasky - Register{% endblock %}
+{% block title %} Flasky -- Edit Post {% endblock %}
 
 {% block page_content %}
 
 	<div class="page-header">
-		<h1>Register</h1>
+		<h1>Edit Post</h1>
 	</div>
-	<div class="col-md-4">
+	<div>
 		{{ wtf.quick_form(form) }}
 	</div>
 
+{% endblock %}
+
+{% block scripts %}
+{{ super() }}
+{{ pagedown.include_pagedown() }}
 {% endblock %}
