--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,10 +1,11 @@
 {% extends "base.html" %}
+{% import "bootstrap/wtf.html" as wtf %}
+{% import "_macros.html" as macros %}
 
 {% block title%} Flasky {% endblock %}
 
 {% block page_content %}
 
-<div class="container-fluid">
 	<div class="page-header">
 		你好。{% if current_user.is_authenticated %}
 		{{ current_user.username }}
@@ -12,10 +13,32 @@
 		Stranger!
 		{% endif %}		
 	</div>
-</div>
 
-<p>The Local Date And Time is {{ moment(current_time).format('LLL') }}</p>
+	<p>The Local Date And Time is {{ moment(current_time).format('LLL') }}</p>
 
-<p>That was {{ moment(current_time).fromNow(refresh=True) }} </p>
+	<p>That was {{ moment(current_time).fromNow(refresh=True) }} </p>
 
+	{% if current_user.can(Permission.WRITE_ARTICLES) %}
+	<div>
+		{{ wtf.quick_form(form) }}
+	</div>
+	{% endif %}
+	<br>
+	<br>
+	<div class="post-tabs">
+		<ul class="nav nav-tabs">
+			<li {% if not show_followed %} class="active" {% endif %}> <a href="{{ url_for('.show_all')}}">All</a></li>
+			<li {% if show_followed %} class="active" {% endif %}> <a href="{{ url_for('.show_followed')}}">Followers</a></li>
+		</ul>
+		{% include '_posts.html' %}
+	</div>
+	<div class="pagination">
+		{{ macros.pagination_widget(pagination,'.index') }}
+	</div>
+
+{% endblock %}
+
+{% block scripts %}
+{{ super() }}
+{{ pagedown.include_pagedown() }}
 {% endblock %}
