--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -17,7 +17,7 @@
 				</a>{% endif %}
 			</p>
 			{% endif %}
-			{% if current_user.is_administrator %}
+			{% if current_user.is_administrator() %}
 			<p><a href="mailto:{{ user.email }}">{{ user.email }}</a></p>
 			{% endif %}
 			{% if user.about_me %}
@@ -50,7 +50,7 @@
 			{% if user == current_user %}
 			<a href="{{ url_for('.edit_profile') }}" class="btn btn-success">Edit Profile</a>&nbsp;&nbsp;
 			{% endif %}
-			{% if current_user.is_administrator %}
+			{% if current_user.is_administrator() %}
 			<a href="{{ url_for('.edit_profile_admin', id=user.id) }}" class="btn btn-danger">Edit Profile [Admin]</a>
 			{% endif %}
 		</div>
