--- a/app/templates/_posts.html
+++ b/app/templates/_posts.html
@@ -14,11 +14,10 @@
 					<a href="{{ url_for('.user', username=post.author.username) }}">{{ post.author.username }}</a>
 				</div>
 				<div class="post-body">
-					<!-- {{ post.body }} -->
 					{% if post.body_html %}
-					{{ post.body_html|safe }}
+						{{ post.body_html|safe|strip }}
 					{% else %}
-					{{ post.body }}
+						{{ post.body }}
 					{% endif %}
 				</div>
 				<div class="post-footer">
@@ -33,12 +32,12 @@
 					<a href="{{ url_for('.edit', id=post.id) }}">
 						<span class="label label-danger">Edit [Admin]</span>
 					</a>
+					{% endif %}
 					<a href="{{ url_for('.post', id=post.id) }}#comments">
 						<span class="label label-info">
 							{{ post.comments.count() }} Comments
 						</span>
 					</a>
-					{% endif %}
 				</div>
 			</div>
 		</li>
