complete sixteen chapater

--- a/app/templates/_posts.html
+++ b/app/templates/_posts.html
@@ -15,7 +15,7 @@
 				</div>
 				<div class="post-body">
 					{% if post.body_html %}
-						{{ post.body_html|safe|strip }}
+						{{ post.body_html|safe }}
 					{% else %}
 						{{ post.body }}
 					{% endif %}
