--- a/app/templates/_comments.html
+++ b/app/templates/_comments.html
@@ -17,7 +17,7 @@
 				{% endif %}
 				{% if moderate or not comment.disabled %}
 					{% if comment.body_html %}
-					{{ comment.body_html }}
+					{{ comment.body_html |safe}}
 					{% else %}
 					{{ comment.body }}
 					{% endif %}
