--- a/app/templates/auth/index.html
+++ b/app/templates/auth/index.html
@@ -4,7 +4,7 @@
 
 {% block page_content %}
 
-你好。{% if current_user.is_authenticated %}
+hello,{% if current_user.is_authenticated %}
 {{ current_user.username }}
 {% else %}
 Stranger!
