--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -7,8 +7,7 @@
 {% block page_content %}
 
 	<div class="page-header">
-		你好。{% if current_user.is_authenticated %}
-		{{ current_user.username }}
+		hello,{% if current_user.is_authenticated %} {{ current_user.username }}!
 		{% else %}
 		Stranger!
 		{% endif %}		
